syntax = "proto3";

package com.road.yishi.proto.army;

message SimpleHeroInfoMsg {
  int32 heroId = 1;
  string nickName = 2;
  int32 tempateId = 3;
  int32 playerId = 4;
  int32 remainPoint = 5;
  int32 skillPoint = 6;
  string skillScript = 7;
  string fastKey = 8;
  int32 hp = 9;
  int32 blood = 10;
  int32 bloodId = 11;
  int32 totalPower = 12;
  int32 totalAgility = 13;
  int32 totalIntellect = 14;
  int32 totalCaptain = 15;
  int32 totalPhysique = 16;
  int32 totalPhyAttack = 17;
  int32 totalPhyDefence = 18;
  int32 totalMagicAttack = 19;
  int32 totalMagicDefence = 20;
  int32 totalForceHit = 21;
  int32 totalParry = 22;
  int32 totalConatArmy = 23;
  int32 totalLive = 24;
  int32 basePower = 25;
  int32 baseAgility = 26;
  int32 baseIntellect = 27;
  int32 baseCaptain = 28;
  int32 basePhysique = 29;
  int32 basePhyAttack = 30;
  int32 basePhyDefence = 31;
  int32 baseMagicAttack = 32;
  int32 baseMagicDefence = 33;
  int32 baseForceHit = 34;
  int32 baseParry = 35;
  int32 baseConatArmy = 36;
  int32 baseLive = 37;
  int32 powerPoint = 38;
  int32 agilityPoint = 39;
  int32 intellectPoint = 40;
  int32 captainPoint = 41;
  int32 physiquePoint = 42;
  int32 fightPos = 43;
  int32 skillIndex = 44;
  bool isActiveSecond = 45;
  int32 headId = 46;
  int32 talentPoint = 47;
  int32 talentGrade = 48;
  string talentSkill = 49;
  int32 grade = 50;
  string arm = 51;
  string cloth = 52;
  string wing = 53;
  int32 fightingCapacity = 54;
  string serverName = 55;
  string hat = 56;
  string fashionArm = 57;
  string fashionCloth = 58;
  bool hide = 59;
  string rune = 60;
  int32 fireResi = 61;
  int32 waterResi = 62;
  int32 electResi = 63;
  int32 windResi = 64;
  int32 darkResi = 65;
  int32 lightResi = 66;
  int32 reduceResi = 67;
  int32 totalStrength = 68;
  int32 baseStrength = 69;
  int32 totalTenacity = 70;
  int32 baseTenacity = 71;
  int32 extraSkillPoint = 72;
}
