syntax = "proto3";

package com.road.yishi.proto.frame;

message FrameInfoMsg {
  int32 frameId = 1;
  int32 isUse = 2;
}
